Add test case for overwrite and if_matched_group

--- a/ruleset/testing/tests/overwrite.ini
+++ b/ruleset/testing/tests/overwrite.ini
@@ -23,7 +23,7 @@ rule = 999912
 alert = 12
 decoder = ow_test
 
-[overwrite child rule]
+[overwrite if_matched_sid]
 log 1 pass = Apr 14 13:38:51 testUser ow_test[13244]: TEST 2 - Parent rule
 log 1 pass = Apr 14 13:38:51 testUser ow_test[13244]: TEST 2 - Parent rule
 log 1 pass = Apr 14 13:38:51 testUser ow_test[13244]: TEST 2 - Parent rule
@@ -31,14 +31,22 @@ rule = 999914
 alert = 12
 decoder = ow_test
 
+[overwrite if_matched_group]
+log 1 pass = Apr 14 13:38:51 testUser ow_test[13244]: TEST 3 - Parent rule
+log 1 pass = Apr 14 13:38:51 testUser ow_test[13244]: TEST 3 - Parent rule
+log 1 pass = Apr 14 13:38:51 testUser ow_test[13244]: TEST 3 - Parent rule
+rule = 999917
+alert = 12
+decoder = ow_test
+
 [overwrite & list]
-log 1 pass = May 27 14:49:04 testUser ow_test[13244]: TEST 3 - Overwrite and list test
-rule = 999915
+log 1 pass = May 27 14:49:04 testUser ow_test[13244]: TEST 4 - Overwrite and list test
+rule = 999918
 alert = 5
 decoder = ow_test
 
 [overwrite & field]
-log 1 pass = Apr 14 13:38:51 testUser test_overwrite_field[13244]: Test example 'TEST4' field
-rule = 999916
+log 1 pass = Apr 14 13:38:51 testUser test_overwrite_field[13244]: Test example 'TEST5' field
+rule = 999919
 alert = 6
 decoder = test_overwrite
