--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -1711,6 +1711,16 @@ components:
                     n_synced_chunks:
                       type: integer
                       format: int32
+                last_sync_agentgroups:
+                  type: object
+                  properties:
+                    date_start_master:
+                      type: string
+                    date_end_master:
+                      type: string
+                    n_synced_chunks:
+                      type: integer
+                      format: int32
                 last_sync_integrity:
                   type: object
                   properties:
@@ -1734,6 +1744,8 @@ components:
                           type: integer
                           format: int32
                 sync_agent_info_free:
+                  type: boolean
+                sync_agent_groups_free:
                   type: boolean
                 sync_integrity_free:
                   type: boolean
@@ -7968,7 +7980,12 @@ paths:
                             extra_valid: 0
                             shared: 0
                         sync_agent_info_free: true
+                        sync_agent_groups_free: true
                         last_sync_agentinfo:
+                          date_start_master: 2021-05-27T10:50:49.174463Z
+                          date_end_master: 2021-05-27T10:50:49.175921Z
+                          n_synced_chunks: 1
+                        last_sync_agentgroups:
                           date_start_master: 2021-05-27T10:50:49.174463Z
                           date_end_master: 2021-05-27T10:50:49.175921Z
                           n_synced_chunks: 1
@@ -7995,7 +8012,12 @@ paths:
                             extra_valid: 0
                             shared: 0
                         sync_agent_info_free: true
+                        sync_agent_groups_free: true
                         last_sync_agentinfo:
+                          date_start_master: 2021-05-27T10:50:48.832800Z
+                          date_end_master: 2021-05-27T10:50:48.833854Z
+                          n_synced_chunks: 1
+                        last_sync_agentgroups:
                           date_start_master: 2021-05-27T10:50:48.832800Z
                           date_end_master: 2021-05-27T10:50:48.833854Z
                           n_synced_chunks: 1
