Add wait_for_complete to MITRE software and techniques API integration tests

--- a/api/test/integration/test_rbac_white_mitre_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_mitre_endpoints.tavern.yaml
@@ -71,6 +71,8 @@ stages:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/mitre/techniques"
       method: GET
+      params:
+        wait_for_complete: true
       headers:
         Authorization: "Bearer {test_login_token}"
     response:
@@ -122,6 +124,8 @@ stages:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/mitre/software"
       method: GET
+      params:
+        wait_for_complete: true
       headers:
         Authorization: "Bearer {test_login_token}"
     response:
