--- a/api/test/integration/test_agent_GET_endpoints.tavern.yaml
+++ b/api/test/integration/test_agent_GET_endpoints.tavern.yaml
@@ -2007,7 +2007,8 @@ stages:
     json:
       error: !anyint
       data:
-        bind_addr: !anystr
+        bind_addr: !anything
+        disabled: !anybool
         hidden: !anystr
         key: !anystr
         name: !anystr
