--- a/ruleset/testing/tests/overwrite.ini
+++ b/ruleset/testing/tests/overwrite.ini
@@ -50,3 +50,9 @@ log 1 pass = Apr 14 13:38:51 testUser test_overwrite_field[13244]: Test example 
 rule = 999919
 alert = 6
 decoder = test_overwrite
+
+[multiple overwrite]
+log 1 pass = Apr 14 13:38:51 testUser test_overwrite_field[13244]: Test example 'MULTIPLE' field
+rule = 999920
+alert = 3
+decoder = test_overwrite
