--- a/ruleset/testing/tests/overwrite.ini
+++ b/ruleset/testing/tests/overwrite.ini
@@ -56,3 +56,15 @@ log 1 pass = Apr 14 13:38:51 testUser test_overwrite_field[13244]: Test example 
 rule = 999920
 alert = 3
 decoder = test_overwrite
+
+[overwrite with if_sid]
+log 1 pass = Apr 14 13:38:51 testUser test_overwrite_field[13244]: Test example 'TEST7' field
+rule = 999922
+alert = 3
+decoder = test_overwrite
+
+[overwrite with if_level]
+log 1 pass = Apr 14 13:38:51 testUser test_overwrite_field[13244]: Test example 'TEST8' field
+rule = 999924
+alert = 3
+decoder = test_overwrite
