Task message queue limited size (#13395)
* Task message queue limited size

* Code review changes

--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -359,6 +359,9 @@ wazuh_database.interval=60
 # 0. Use system default
 wazuh_database.max_queued_events=0
 
+# Vulnerability Detector task message queue size
+wazuh_vuln_detector.message_queue_size=10000
+
 # Enable download module
 # 0. Disabled
 # 1. Enabled (default)
