--- a/api/test/integration/test_rbac_white_cluster_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_cluster_endpoints.tavern.yaml
@@ -20,7 +20,7 @@ stages:
               node_type: !anystr
               certfile: !anystr
               keyfile: !anystr
-              password: !anystr
+              keyfile_password: !anystr
               port: !anyint
               bind_addr: !anything
               nodes: !anything
