--- a/api/test/integration/test_agent_GET_endpoints.tavern.yaml
+++ b/api/test/integration/test_agent_GET_endpoints.tavern.yaml
@@ -2007,10 +2007,13 @@ stages:
     json:
       error: !anyint
       data:
+        disabled: !anystr
         bind_addr: !anything
-        disabled: !anybool
         hidden: !anystr
         key: !anystr
+        certfile: !anystr
+        keyfile: !anystr
+        keyfile_password: !anystr
         name: !anystr
         node_name: !anystr
         node_type: !anystr
