--- a/src/engine/test/source/_builder/CMakeLists.txt
+++ b/src/engine/test/source/_builder/CMakeLists.txt
@@ -1,13 +1,12 @@
 # Configuration Catalog tests
 add_executable(_builder_test
-  ${TEST_SOURCE_DIR}/_builder/connectable_test.cpp
-  ${TEST_SOURCE_DIR}/_builder/registry_test.cpp
+  #${TEST_SOURCE_DIR}/_builder/registry_test.cpp
   ${ENGINE_SOURCE_DIR}/_builder/builders/operationBuilder.cpp
-  ${ENGINE_SOURCE_DIR}/_builder/builders/stageBuilders.cpp
-  ${ENGINE_SOURCE_DIR}/_builder/builders/assetBuilder.cpp
-  ${ENGINE_SOURCE_DIR}/_builder/builders/graphBuilders.cpp
+  ${ENGINE_SOURCE_DIR}/_builder/builders/stageBuilder.cpp
+  # ${ENGINE_SOURCE_DIR}/_builder/builders/assetBuilder.cpp
   ${TEST_SOURCE_DIR}/_builder/builder_test.cpp
   ${TEST_SOURCE_DIR}/_builder/event_test.cpp
+  ${TEST_SOURCE_DIR}/_builder/expression_test.cpp
 )
 
 target_include_directories(_builder_test
